manifests/mosquitto/mosquitto.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: automation
  name: mosquitto
  labels:
    name: mosquitto
  annotations:
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.50.190
  ports:
  - port: 1883
    targetPort: mqtt
    protocol: TCP
    name: mqtt
  selector:
    name: mosquitto
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mqtt-to-ha
  namespace: automation
spec:
  podSelector:
    matchLabels:
      app: mosquitto
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: automation
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: automation
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: automation
  name: mosquitto
  labels:
    name: mosquitto
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      name: mosquitto
  template:
    metadata:
      labels:
        name: mosquitto
    spec:
      securityContext:
        runAsUser: 1883
      serviceAccountName: default
      automountServiceAccountToken: true
      enableServiceLinks: true
      containers:
        - name: mosquitto
          image: "eclipse-mosquitto:2.0.17"
          imagePullPolicy: IfNotPresent
          ports:
            - name: mqtt
              containerPort: 1883
              protocol: TCP
          volumeMounts:
            - name: mosquitto-config
              mountPath: /mosquitto/config/mosquitto.conf
              subPath: mosquitto.conf
            - name: mosquitto-data
              mountPath: /mosquitto/data               
          livenessProbe:
            tcpSocket:
              port: 1883
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 1883
            initialDelaySeconds: 0
            failureThreshold: 3
            timeoutSeconds: 1
            periodSeconds: 10
          startupProbe:
            tcpSocket:
              port: 1883
            initialDelaySeconds: 0
            failureThreshold: 30
            timeoutSeconds: 1
            periodSeconds: 5
      volumes:
        - name: mosquitto-config
          configMap:
            name: mosquitto
        - name: mosquitto-data
          emptyDir: {}
